--- a/vite-vanilla/manifest.json
+++ b/vite-vanilla/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 3,
-    "name": "CRXJS Vue Vite Example",
+    "name": "CRXJS Vanilla JS Example",
     "version": "1.0.0",
     "action": { "default_popup": "index.html" }
 }
