--- a/vite-vanilla/manifest.json
+++ b/vite-vanilla/manifest.json
@@ -2,5 +2,6 @@
     "manifest_version": 3,
     "name": "CRXJS Vanilla JS Example",
     "version": "1.0.0",
-    "action": { "default_popup": "index.html" }
+    "action": { "default_popup": "src/pages/popup/index.html" },
+    "options_page": "src/pages/option/index.html"
 }
