--- a/vite-vanilla/package.json
+++ b/vite-vanilla/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.9",
+    "@types/chrome": "^0.0.206",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
