--- a/vite-vanilla/manifest.json
+++ b/vite-vanilla/manifest.json
@@ -21,5 +21,8 @@
             "128": "src/assets/icon128.png"
         }
     },
-    "options_page": "src/pages/option/index.html"
+    "options_page": "src/pages/option/index.html",
+    "background": {
+        "service_worker": "src/components/background.ts"
+    }
 }
