--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,19 +6,18 @@
     "moduleResolution": "Node",
     "strict": true,
     "jsx": "preserve",
-    "resolveJsonModule": true,
     "isolatedModules": true,
     "esModuleInterop": true,
     "lib": ["ESNext", "DOM"],
     "skipLibCheck": true,
-    "noEmit": true
+    "noEmit": true,
+    "resolveJsonModule": true,
   },
   "include": [
     "src/**/*.ts",
     "src/**/*.d.ts", 
     "src/**/*.tsx", 
-    "src/**/*.vue", 
-    "manifest.json"
+    "src/**/*.vue"
   ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
