--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,26 @@
 {
     "manifest_version": 3,
-    "name": "CRXJS Vue Vite Example",
+    "name": "Regex Url Blocker",
     "version": "1.0.0",
     "permissions": [
         "identity",
         "storage",
         "tabs"
     ],
-    "action": { "default_popup": "src/pages/popup/index.html" },
+    "icons": {
+        "16": "public/icon_16.png",
+        "48": "public/icon_48.png",
+        "128": "public/icon_128.png"
+    },
+    "action": { 
+        "default_popup": "src/pages/popup/index.html",
+        "default_icon": {
+            "16": "public/icon_16.png",
+            "48": "public/icon_48.png",
+            "128": "public/icon_128.png"
+        },
+        "default_title": "Regex Url Blocker"
+    },
     "options_page": "src/pages/option/index.html",
     "background": { "service_worker": "src/scripts/background.ts" }
 }
